# modlin-rs

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: rust.yml
src/: cli.rs  fp.rs  gf.rs  lib.rs  main.rs  prng.rs  stats.rs
tests/: test_linear_complexity.rs  test_prng.rs  test_rank.rs  test_stats.rs
